# Xwork

./: .gitignore  CLAUDE.md  README.md  manage-worktrees.ps1  pnpm-lock.yaml
backend/: README.md  main.py  pyproject.toml  test_opencode_integration.py  test_opencode_simple.py  test_openwork_bridge.py
backend/app/: agent_swarm.py  checkin_guard.py  context_server.py  editor_ipc.py  exceptions.py  logger.py  opencode_integration.py  openwork_bridge.py  schema_migration.py  schemas.py  session_sync.py  spec_diff.py  spec_export.py  spec_lifecycle.py  spec_storage.py  spec_versioning.py  tfs_auth.py  tfs_mcp.py  validators.py  workspace_analyzer.py
backend/app/config/: README.md  __init__.py  ai_models.py  base.py  database.py  redis.py
backend/app/editor/: __init__.py  code_analyzer.py  diff_generator.py  file_watcher.py
backend/app/llm/: __init__.py  client.py
backend/app/prompts/: __init__.py  templates.py
backend/app/superpower/: __init__.py  chroma_store.py  content_truncator.py  context_composer.py  document_processor.py  embeddings.py  fuzzy_matcher.py  hybrid_retriever.py  keyword_matcher.py  markdown_parser.py  models.py  priority_sorter.py  relevance_scorer.py  skills_cache.py  skills_context.py  skills_loader.py  skills_retriever.py  skills_scanner.py  tag_filter.py  (+1 more)
backend/tests/: test_api_phase1.py  test_config.py  test_integration_skills.py  test_skills_api.py  test_skills_context.py  test_skills_loader.py  test_skills_retriever.py  test_spec_diff.py  test_spec_export.py  test_spec_storage.py  test_spec_versioning_lifecycle.py  test_validators.py
(+8 files in other folders)
