[project]
name = "forge-engine"
version = "0.1.0"
description = "Enterprise Forge Backend Engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.34.0",
    "chromadb>=0.5.5",
    "tiktoken>=0.7.0",
    "watchdog>=4.0.0",
    "jieba>=0.42.1",
    "rapidfuzz>=3.9.6",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
